--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "timwassenburg/laravel-service-generator": "^1.0"
     },
     "require-dev": {
+        "barryvdh/laravel-debugbar": "^3.7",
         "barryvdh/laravel-ide-helper": "^2.12",
         "fakerphp/faker": "^1.9.1",
         "laravel/sail": "^1.0.1",
